[package]
name = "falcon"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.5"}
reqwest = { version = "0.11", features = ["stream", "json"] }
tokio = { version = "1.0", features = ["full"] }
config = "0.14.0"
serde = "1.0.197"
serde_json = "1.0.115"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
dotenv = "0.15.0"
hyper = "0.14.28"
tower = "0.4.13"
toml = "0.8.12"
hyper-util = "0.1.3"
http = "0.2.12"
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = "0.9.102"
